--- a/src/EdIlyin.FSharp.Boxcar/EdIlyin.FSharp.Boxcar.fsproj
+++ b/src/EdIlyin.FSharp.Boxcar/EdIlyin.FSharp.Boxcar.fsproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>EdIlyin.FSharp.Boxcar</RootNamespace>
     <AssemblyName>EdIlyin.FSharp.Boxcar</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
     <Name>EdIlyin.FSharp.Boxcar</Name>
     <TargetFrameworkProfile />
@@ -112,10 +112,10 @@
     </When>
   </Choose>
   <Choose>
-    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.6.2' Or $(TargetFrameworkVersion) == 'v4.6.3' Or $(TargetFrameworkVersion) == 'v4.7')">
+    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.6.1' Or $(TargetFrameworkVersion) == 'v4.6.2' Or $(TargetFrameworkVersion) == 'v4.6.3' Or $(TargetFrameworkVersion) == 'v4.7')">
       <ItemGroup>
         <Reference Include="EdIlyin.FSharp.Elm.Core">
-          <HintPath>..\..\packages\EdIlyin.FSharp.Elm.Core\lib\net462\EdIlyin.FSharp.Elm.Core.dll</HintPath>
+          <HintPath>..\..\packages\EdIlyin.FSharp.Elm.Core\lib\net461\EdIlyin.FSharp.Elm.Core.dll</HintPath>
           <Private>True</Private>
           <Paket>True</Paket>
         </Reference>
